fixes filters overlap in certain areas

--- a/assets/stylesheets/content/portfolio/_filters.scss
+++ b/assets/stylesheets/content/portfolio/_filters.scss
@@ -17,7 +17,7 @@
         justify-content: space-evenly;
         align-items: flex-start;
         width: auto;
-        height: 100px;
+        height: auto;
         max-width: 1000px;
     
         .filter-option {
@@ -33,6 +33,6 @@
 
 @include media("<tablet") {
     .filters-container {
-        padding: 30px 0 1% 0;
+        padding: 30px 1% 2rem;
     }
 }
